feat(api): expose app version by api
